--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nbboudjije.github.io/gamify-modern-lp",
+  "homepage": "https://nbboudjije.github.io/gamify-modern-lpp",
   "name": "myrapp",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
