--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nbboudjije.github.io/gamify-modern-lpp",
+  "homepage": "https://nbboudjije.github.io/gamify-modern-lpp/",
   "name": "myrapp",
   "version": "0.1.0",
   "private": true,
